test/parse/expr/bad-convert-int-no-sign.txt
;;; ERROR: 1
(module (func (i32.convert.i32 (i32.const))))
(;; STDERR ;;;
parse/expr/bad-convert-int-no-sign.txt:2:16: unexpected token "i32.convert.i32"
(module (func (i32.convert.i32 (i32.const))))
               ^^^^^^^^^^^^^^^
parse/expr/bad-convert-int-no-sign.txt:2:32: syntax error, unexpected (
(module (func (i32.convert.i32 (i32.const))))
                               ^
;;; STDERR ;;)
